modificacion y actualizacion de proyecto

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -52,6 +52,30 @@
         </div>
       </nav>
       <!-- ends nav --> 
+      <main>
+        <section>
+          <article class="contenido-nosotros">
+            <img src="../img/modelosentada.jpg" width="90%" height="400px"  alt="modelo sentada">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque sunt voluptate vel ipsam nihil distinctio odio nisi incidunt eligendi! 
+            Excepturi quos praesentium magni ratione. Similique voluptatem consequatur ex odit magnam.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi obcaecati, reiciendis placeat repudiandae quod cumque nulla eos facere quibusdam incidunt repellat 
+            tempora ut assumenda voluptatem non praesentium, dicta, corrupti dolorum!
+          </p>
+        </article>
+        </section>
+        <section>
+          <article class="contenido-nosotros">
+            <img src="../img/modelosentada.jpg" width="90%" height="400px" alt="modelo sentada">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque sunt voluptate vel ipsam nihil distinctio odio nisi incidunt eligendi! 
+            Excepturi quos praesentium magni ratione. Similique voluptatem consequatur ex odit magnam.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi obcaecati, reiciendis placeat repudiandae quod cumque nulla eos facere quibusdam incidunt repellat 
+            tempora ut assumenda voluptatem non praesentium, dicta, corrupti dolorum!
+          </p>
+        </article>
+        </section>
+      </main>
   <footer>
     <div class="contenedor">
         <h3 class="titulo">Sigamos conectados</h3>
