--- a/html/compra.html
+++ b/html/compra.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Calu Store</title>
   </head>
@@ -29,7 +30,7 @@
              </li>
 
              <li class="nav-item">
-                <a class="nav-link active" href="../contactanos.html">Contacto</a>
+                <a class="nav-link active" href="../contacto.html">Contacto</a>
              </li>
 
              <li class="nav-item">
@@ -53,27 +54,72 @@
     </nav>
      <!-- ends nav --> 
    <main>
-     <section class="py-2 row bg-aqua">
-        <h2 class="mt-2 text-center">Recibe todas las ofertas</h2>
-        <p>Quieres recibir nuestras ofertas? ¡Registrate ya mismo y comenza a disfrutarlas!</p>
-       <article class="col-sm-12 col-md-12 col-lg-8">
-         <form>
-           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-           </div>
-           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Mensaje opcional</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <div class="grid-compra-padre">
+      <div class="compra-hijo1">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="../img/vanS.webp" alt="First slide">
             </div>
-            <button type="enviar" class="btn btn-primary">Enviar</button>
-          </form>
-        </article>
-         <div class="col-sm-12 col-md-12 col-lg-4" >
-            <img src="../img/nike.jpg" alt="nike" class="w-100 rounded-top">
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../img/puma.webp" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../img/banner.jpg" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-     </section><!-- ends row-->
-     
+      </div>
+      <div class="compra-hijo2">
+        <table  class="tablas-contacto">
+          <tr>
+            <th>Telefonos</th>
+            <th>Correo</th>
+            <th>Direccion</th>
+          </tr>
+          <tr>
+            <td>Av Rivadavia 7428</td>
+            <td>calustore88@gmail.com</td>
+            <td>5491174585934</td>
+          </tr>
+          <tr>
+            <td>Av Rivadavia 7428</td>
+            <td>calustore88@gmail.com</td>
+            <td>5491174585934</td>
+          </tr>
+           </table>
+      </div>
+      <div class="compra-hijo3">
+        <form action="" class="formulario-hijo">
+          <legend><h3>Compra</h3></legend>
+          <label for="cantidad">Cantidad</label>
+          <input type="number" id="cantidad" name="cantidad" placeholder="cantidad" required>
+          <label for="envio">Envio gratis a todo el pais</label>
+          <input type="text" id="envio" name="envio" placeholder="envio" required>
+           <input type="submit" value="enviar"   class="btn" > 
+           <input type="reset" value="cancelar" class="btn" >
+        </form>
+      </div>
+      <div class="compra-hijo4">
+        <form action="" class="formulario-hijo">
+          <legend><h3>Comentarios</h3></legend>
+          <label for="email">Usuario</label>
+          <input type="email" id="email" name="email" placeholder="correo" required>
+          <label for="mensaje">Mensaje</label>
+          <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
+           <input type="submit" value="enviar"   class="btn" > 
+           <input type="reset" value="cancelar" class="btn" >
+        </form>
+      </div>
+    </div>
    </main>
    <footer>
         <div class="contenedor">
