--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- inicia nav -->
   <nav class="navbar navbar-expand-lg bg-lightblue sticky-top" id="botonera">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html"><h2>Calu Store</h2></a>
+      <a class="navbar-brand" href="./index.html"><h2>Calu Store</h2></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
