--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Zapatillas multimarcas, de calidad y a un buen precio solo en este sitio">
+    <meta name="author" content="Carolina Lezcano">
+    <meta name="keywords" content="zapatilla nike air jordan, zapatilla nike air force, zapatilla vans">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Calu Store</title>
+    <title>Contacto-Calu Store</title>
   </head>
  <body>
      <!-- Encabezado -->
