--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- meta seo -->
+    <meta name="description" content="Zapatillas multimarcas, de calidad y a un buen precio solo en este sitio">
+    <meta name="author" content="Carolina Lezcano">
+    <meta name="keywords" content="zapatilla nike air jordan, zapatilla nike air force, zapatilla vans">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -70,15 +74,15 @@
 
         <div class="carousel-inner hijo-">
           <div class="carousel-item active">
-           <img src="./img/superstar.webp" class="d-block w-100" alt="zapatilla superstar" height="500px" >
+           <img src="./img/superstar.webp" class="d-block w-100" alt="zapatilla superstar" height="100%" >
          </div>
 
          <div class="carousel-item">
-           <img src="./img/puma.webp" class="d-block w-100" alt="zapatillas puma" height="500px" >
+           <img src="./img/puma.webp" class="d-block w-100" alt="zapatillas puma" height="100%" >
          </div>
 
          <div class="carousel-item">
-           <img src="./img/vanS.webp" class="d-block w-100" alt="zapatillas vans" height="500px" >
+           <img src="./img/vanS.webp" class="d-block w-100" alt="zapatillas vans" height="100%" >
          </div>
 
         <div>
