agregado sass2 y seo

--- a/html/compra.html
+++ b/html/compra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Zapatillas multimarcas, de calidad y a un buen precio solo en este sitio">
+    <meta name="description" content="Aqui podras ver todas tus compras">
     <meta name="author" content="Carolina Lezcano">
     <meta name="keywords" content="zapatilla nike air jordan, zapatilla nike air force, zapatilla vans">
     <!-- Bootstrap CSS -->
@@ -89,14 +89,14 @@
             <th>Direccion</th>
           </tr>
           <tr>
-            <td>Av Rivadavia 7428</td>
+            <td>5491176542343</td>
             <td>calustore88@gmail.com</td>
-            <td>5491174585934</td>
+            <td>Av Rivadavia 7428</td>
           </tr>
           <tr>
-            <td>Av Rivadavia 7428</td>
+            <td>5491176542343</td>
             <td>calustore88@gmail.com</td>
-            <td>5491174585934</td>
+            <td>Av Rivadavia 7428</td>
           </tr>
            </table>
       </div>
