--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Zapatillas multimarcas, de calidad y a un buen precio solo en este sitio">
+    <meta name="description" content="Conocenos un poco mas">
     <meta name="author" content="Carolina Lezcano">
-    <meta name="keywords" content="zapatilla nike air jordan, zapatilla nike air force, zapatilla vans">
+    <meta name="keywords" content="historia, dueños, sobre ustedes">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -59,22 +59,26 @@
         <section>
           <article class="contenido-nosotros">
             <img src="../img/modelosentada.jpg" width="90%" height="400px"  alt="modelo sentada">
+            <h2>Quiènes somos</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque sunt voluptate vel ipsam nihil distinctio odio nisi incidunt eligendi! 
-            Excepturi quos praesentium magni ratione. Similique voluptatem consequatur ex odit magnam.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi obcaecati, reiciendis placeat repudiandae quod cumque nulla eos facere quibusdam incidunt repellat 
-            tempora ut assumenda voluptatem non praesentium, dicta, corrupti dolorum!
+            Nacidos en Estados Unidos, en 1990, nuestro grupo se encuentra conformado por cuatro marcas en América Latina: Nike, Vans, Adidas y Kappa
+
+            Todas ellas mantienen calidad y diseño reconocidos en todo el mundo, además del enfoque y propósito principal de nuestra compañía: ubicar al consumidor en el centro de todo.
+            
+            Desde el desarrollo y creación de la plantilla para el pie, somos la única empresa de calzados del mundo que es capaz de ofrecer soluciones completas a los clientes y profesionales.
+            
+            Y eso se puede comprobar gracias a los 60 millones de zapatillas vendidos, todos los años, en más de 150 mercados.
           </p>
         </article>
         </section>
         <section> 
           <article class="contenido-nosotros">
-            <img src="../img/modelosentada.jpg" width="90%" height="400px" alt="modelo sentada">
+            <img src="../img/modelo.jpg" width="90%" height="400px" alt="modelo sentada">
+            <h2>Queremos marcar la diferencia, y para mejor.</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque sunt voluptate vel ipsam nihil distinctio odio nisi incidunt eligendi! 
-            Excepturi quos praesentium magni ratione. Similique voluptatem consequatur ex odit magnam.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi obcaecati, reiciendis placeat repudiandae quod cumque nulla eos facere quibusdam incidunt repellat 
-            tempora ut assumenda voluptatem non praesentium, dicta, corrupti dolorum!
+            Nuestras soluciones sustentables están pensadas todos los días para beneficiar cada vez a más personas, incluyendo el cuidado de nuestro planeta.
+
+            Tenemos metas ambiciosas y trabajamos juntos para conquistarlas: reducir nuestra huella de carbono en un 50% y aumentar la eficiencia de nuestros materiales son algunas de ellas, todas en áreas de gran importancia para el futuro próximo.
           </p>
         </article>
         </section>
