--- a/html/preguntasfrecuentes.html
+++ b/html/preguntasfrecuentes.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Zapatillas multimarcas, de calidad y a un buen precio solo en este sitio">
+	<meta name="description" content="Preguntas e inquietudes que podrias llegar a tener resueltas en este sitio">
     <meta name="author" content="Carolina Lezcano">
-    <meta name="keywords" content="zapatilla nike air jordan, zapatilla nike air force, zapatilla vans">
+    <meta name="keywords" content="preguntas frecuentes, ayuda, consulta">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -61,12 +61,10 @@
       </nav>
       <!-- ends nav --> 
 	<main>
-		<div class="sobrenosotros">
-			<h2>Nosotros</h2>
+		<div>
+			<h1>Preguntas frecuentes</h1>
 			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quaerat eos, dolorem ipsa asperiores
-				quos, modi, maxime ipsam quisquam expedita dicta temporibus vero necessitatibus. Corporis asperiores aliquam
-				eaque alias cumque.
+				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, culpa. Eligendi, omnis nostrum. Odit deserunt dolorum quos quam totam ad, quis voluptas nesciunt velit. Corrupti nostrum ipsam ullam commodi laudantium.
 			</p>
 		</div>
 		<div class="mapa">
@@ -76,14 +74,9 @@
 					style="border:0;" allowfullscreen="" loading="lazy"
 					referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
-	     <section class="section">
-			<h2>Productos</h2>
-			<div class="galeria">
-				<img src="../img/zapasvans.jpg" alt="zapatillas vans" width="100%">
-				<img src="../img/nikeair.jpg" alt="zapatillas nike air force" width="100%">
-				<img src="../img/zapatilla.jpg" alt="zapatilla" width="100%">
-			</div>
-		 </section>
+		<div>
+			<p> <small> ¿No encontraste lo que buscabas? Escríbenos <a href="../html/contacto.html" ng-click="vm.onClickSupport($event)" class="ch-btn-2021-link" ng-bind="'faqs.leyend.btn' | translate">hace click aquí</a> </small> </p>
+		</div>
 	     <section>
 		  <form action="">
 			 <h3>Contacto</h3>
