--- a/html/ofertas.html
+++ b/html/ofertas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Zapatillas multimarcas, de calidad y a un buen precio solo en este sitio">
+    <meta name="description" content="Ofertas y promociones del momento y al mejor precio">
     <meta name="author" content="Carolina Lezcano">
     <meta name="keywords" content="zapatilla nike air jordan, zapatilla nike air force, zapatilla vans">
     <!-- Bootstrap CSS -->
