Actualizacion de pagina web

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -32,19 +32,19 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link active" href="../contacto.html">Contacto</a>
+                <a class="nav-link active" href="./contacto.html">Contacto</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link active"  href="../productos.html">Productos</a>
+                <a class="nav-link active" href="./nosotros.html">Nosotros</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link active" href="../nosotros.html">Nosotros</a>
+                <a class="nav-link active"  href="./productos.html">Productos</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link active"  href="../ofertas.html">Ofertas</a>
+                <a class="nav-link active" href="./preguntasfrecuentes.html">Preguntas Frecuentes</a>
               </li>
             </ul>
             <form class="d-flex" role="Buscar">
@@ -88,9 +88,15 @@
         <h3 class="titulo">Sigamos conectados</h3>
     </div>
     <div class="redes-sociales">
+      <a href="./contacto.html">
         <li class="fab fa-instagram"></li>
+      </a>
+      <a href="./contacto.html">
         <li class="fab fa-twitter"></li>
+      </a>
+      <a href="./contacto.html">
         <li class="fab fa-facebook"></li>
+      </a>
     </div>
     <div class="contenedor">
         <p class="copy">© 2022 Carolina Lezcano / Todos los derechos reservados</p>
