--- a/html/preguntasfrecuentes.html
+++ b/html/preguntasfrecuentes.html
@@ -25,7 +25,7 @@
   <!-- inicia nav -->
   <nav class="navbar navbar-expand-lg bg-lightblue sticky-top" id="botonera">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="../index.html">
         <h2>Calu Store</h2>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" href="./index.html">Inicio</a>
+            <a class="nav-link active" href="../index.html">Inicio</a>
           </li>
 
           <li class="nav-item">
@@ -43,88 +43,135 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="./productos.html">Productos</a>
-          </li>
-
-          <li class="nav-item">
             <a class="nav-link active" href="./nosotros.html">Nosotros</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="./ofertas.html">Ofertas</a>
+            <a class="nav-link active" href="./productos.html">Productos</a>
           </li>
 
           <li class="nav-item">
             <a class="nav-link active" href="./preguntasfrecuentes.html">Preguntas Frecuentes</a>
           </li>
         </ul>
-        <form class="d-flex" role="Buscar">
-          <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
-          <button class="btn btn-outline-success" type="buscar">Buscar</button>
-        </form>
       </div>
     </div>
   </nav>
   <!-- ends nav -->
   <main>
-    <h1>Preguntas frecuentes</h1>
-    <div>
-      <div id="accordion">
-        <div class="card">
-          <div class="card-header" id="headingOne">
-            <h5 class="mb-0">
-              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Collapsible Group Item #1
-              </button>
-            </h5>
-          </div>
-      
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h5 class="mb-0">
-              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Collapsible Group Item #2
-              </button>
-            </h5>
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
+    <h1><strong>Preguntas Frecuentes</strong></h1>
+    <h2><strong>Pagos</strong></h2>
+    <div class="accordion" id="accordionPanelsStayOpenExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+            aria-controls="panelsStayOpen-collapseOne">
+            <strong>Cuales son los medios de pago disponibles?</strong>
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+          aria-labelledby="panelsStayOpen-headingOne">
+          <div class="accordion-body">
+            Podrás abonar tus pedidos con tarjeta debito, tarjeta de crédito o por mercado pago.
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h5 class="mb-0">
-              <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Collapsible Group Item #3
-              </button>
-            </h5>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseTwo">
+            <strong> Es seguro pagar con mi tarjeta de crédito en CaluStore?</strong>
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingTwo">
+          <div class="accordion-body">
+            Sí, es seguro. Entendemos que la seguridad de tu información personal es de suma importancia para vos.
+            Cumplimos con el estándar internacional de protección de datos, para que tu información personal y de
+            tarjeta de crédito, esté protegida de accesos no autorizados.
           </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-            <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseThree">
+            <strong>Como sé que mi pago fue acreditado?</strong>
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingThree">
+          <div class="accordion-body">
+            Una vez que tu pago haya sido acreditado correctamente por administración, recibirás un correo electrónico
+            informándote el número de acreditación y el número de factura correspondiente.
           </div>
         </div>
       </div>
     </div>
-    <div class="mapa">
-      <h2>Estamos ubicados en Av Rivadavia 7428</h2>
-      <iframe class="iframe"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.9308357594923!2d-58.472280384769675!3d-34.631188080452254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc98f1873779f%3A0xa8d52c82fba63035!2sAv.%20Rivadavia%207428%2C%20C1406GMR%20CABA!5e0!3m2!1ses-419!2sar!4v1655136338910!5m2!1ses-419!2sar"
-        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <h2><strong>Envío y Retiro</strong></h2>
+    <div class="accordion" id="accordionPanelsStayOpenExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+            aria-controls="panelsStayOpen-collapseOne">
+            <strong>Cuáles son las formas de envío?</strong>
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+          aria-labelledby="panelsStayOpen-headingOne">
+          <div class="accordion-body">
+            Envío Express EN EL DÍA, CIUDAD AUTÓNOMA DE BUENOS AIRES: válido para días hábiles. Es un servicio premium destinado para residentes de CABA. Válido para compras realizadas con tarjeta de crédito. Si el pedido se realiza antes de las 12 hs, llegará ese mismo día. Horario de entrega hasta las 00 hs. Si no al siguiente día hábil. Límite de peso 690 g (equivalente a un calzado).
+            <br>
+            Eco Envío CABA. Tus compras te llega en bici y envueltas en bolsas compostables. Conocé más haciendo click en Sustentabilidad
+            <br>
+            Retiro en sucursal: podés elegir retirar tu pedido en cualquiera de las sucursales Dexter disponibles al momento de realizar tu compra. 
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseTwo">
+            <strong> Cuál es el costo del envío?</strong>
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingTwo">
+          <div class="accordion-body">
+            Express CABA $609
+            <br>
+            Eco Envío CABA $539
+            </Br>
+            Entrega en sucursal $220
+            <br>
+            Normal AMBA $519
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+            aria-controls="panelsStayOpen-collapseThree">
+            <strong>En qué días y horarios entregan los pedidos?</strong>
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+          aria-labelledby="panelsStayOpen-headingThree">
+          <div class="accordion-body">
+            Las entregas de pedidos se realizan de lunes a viernes de 8 hs a 00 hs. No se entregan pedidos los fines de semana ni los feriados.
+          </div>
+        </div>
+      </div>
     </div>
     <div>
-      <p> <small> ¿No encontraste lo que buscabas? Escríbenos <a href="../html/contacto.html"
-            ng-click="vm.onClickSupport($event)" class="ch-btn-2021-link" ng-bind="'faqs.leyend.btn' | translate">hace
-            click aquí</a> </small> </p>
+      <p><small><strong>¿No encontraste lo que buscabas? Escríbenos</strong></small></p>
+        
     </div>
     <section>
       <form action="">
@@ -143,9 +190,15 @@
       <h3 class="titulo">Sigamos conectados</h3>
     </div>
     <div class="redes-sociales">
-      <li class="fab fa-instagram"></li>
-      <li class="fab fa-twitter"></li>
-      <li class="fab fa-facebook"></li>
+      <a href="./preguntasfrecuentes.html">
+        <li class="fab fa-instagram"></li>
+      </a>
+      <a href="./preguntasfrecuentes.html">
+        <li class="fab fa-twitter"></li>
+      </a>
+      <a href="./preguntasfrecuentes.html">
+        <li class="fab fa-facebook"></li>
+      </a>
     </div>
     <div class="contenedor">
       <p class="copy">© 2022 Carolina Lezcano / Todos los derechos reservados</p>
