--- a/index.html
+++ b/index.html
@@ -50,15 +50,11 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="../html/productos.html">Productos</a>
-          </li>
-
-          <li class="nav-item">
             <a class="nav-link active" href="../html/nosotros.html">Nosotros</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="../html/ofertas.html">Ofertas</a>
+            <a class="nav-link active" href="../html/productos.html">Productos</a>
           </li>
 
           <li class="nav-item">
@@ -78,13 +74,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/vanS.webp" class="d-block w-100" alt="..." id="hola">
+          <img src="./img/vanS.webp" class="d-block w-100" alt="publicidad vans">
         </div>
         <div class="carousel-item">
-          <img src="./img/superstar.webp" class="d-block w-100" alt="...">
+          <img src="./img/superstar.webp" class="d-block w-100" alt="publicidad superstar">
         </div>
         <div class="carousel-item">
-          <img src="./img/puma.webp" class="d-block w-100" alt="...">
+          <img src="./img/puma.webp" class="d-block w-100" alt="publicidad puma">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -106,21 +102,21 @@
         <h1 class="mt-2 text-center text-blue">DESTACADOS</h1>
         <section class="row py-2">
           <article class="col-sm-12 col-md-6 col-lg-3">
-            <img src="img/adidas.jpg" alt="adidas" class="w-100 img-thumbnail">
+            <img src="img/adidas.jpg" alt="zapatilla adidas" class="w-100 img-thumbnail">
             <p>Zapatillas Adidas</p>
             <h3 class="text-blue">$5.999</h3>
           </article>
           <!--ends card I-->
 
           <article class="col-sm-12 col-md-6 col-lg-3">
-            <img src="img/zapasvans.jpg" alt="vans" class="w-100 img-thumbnail">
+            <img src="img/zapasvans.jpg" alt=" zapatilla vans" class="w-100 img-thumbnail">
             <p>Zapatillas Vans Old School Unisex</p>
             <h3 class="text-blue">$6.999</h3>
           </article>
           <!--ends card II-->
 
           <article class="col-sm-12 col-md-6 col-lg-3">
-            <img src="img/nikeair.jpg" alt="nike air" class="w-100 img-thumbnail">
+            <img src="img/nikeair.jpg" alt="zapatilla nike air" class="w-100 img-thumbnail">
             <p>Zapatillas Nike Air Force 1 Unisex</p>
             <h3 class="text-blue">$8.999</h3>
           </article>
@@ -145,13 +141,13 @@
           </article>
 
           <article class="col-sm-12 col-md-6 col-lg-3">
-            <img src="img/vansnegras.jpg" alt="adidas" class="w-100 img-thumbnail">
+            <img src="img/vansnegras.jpg" alt="Zapatillas vans negras" class="w-100 img-thumbnail">
             <p>Zapatillas Vans Old School Unisex</p>
             <h3 class="text-blue">$6.999</h3>
           </article>
 
           <article class="col-sm-12 col-md-6 col-lg-3">
-            <img src="img/pareja.jpg" alt="" class="w-100 img-thumbnail">
+            <img src="img/pareja.jpg" alt="Pareja modelando zapatilla" class="w-100 img-thumbnail">
             <p>Zapatillas Adidas</p>
             <h3 class="text-blue">$6.999</h3>
           </article>
@@ -164,9 +160,9 @@
             <h3>Recibe las ofertas</h3>
           </legend>
           <label for="email">Correo</label>
-          <input type="email" id="email" name="email" placeholder="correo" required>
+          <input type="email" id="email" name="email" placeholder="Correo" required>
           <label for="telefono">Telefono</label>
-          <input type="tel" id="telefono" name="telefono" placeholder="correo" required>
+          <input type="tel" id="telefono" name="telefono" placeholder="Telefono" required>
           <input type="submit" value="enviar" class="btn">
           <input type="reset" value="cancelar" class="btn">
         </form>
@@ -176,14 +172,9 @@
       <div class="hijo-grid4">
         <table class="tablas-contacto">
           <tr>
-            <th>Telefonos</th>
-            <th>Correo</th>
             <th>Direccion</th>
-          </tr>
-          <tr>
-            <td>Av Rivadavia 7428</td>
-            <td>calustore88@gmail.com</td>
-            <td>5491174585934</td>
+            <th>Correo</th>
+            <th>Telefonos</th>
           </tr>
           <tr>
             <td>Av Rivadavia 7428</td>
@@ -199,9 +190,15 @@
       <h3 class="titulo">Sigamos conectados</h3>
     </div>
     <div class="redes-sociales">
-      <li class="fab fa-instagram"></li>
-      <li class="fab fa-twitter"></li>
-      <li class="fab fa-facebook"></li>
+      <a href="./index.html">
+        <li class="fab fa-instagram"></li>
+      </a>
+      <a href="./index.html">
+        <li class="fab fa-twitter"></li>
+      </a>
+      <a href="./index.html">
+        <li class="fab fa-facebook"></li>
+      </a>
     </div>
     <div class="contenedor">
       <p class="copy">© 2022 Carolina Lezcano / Todos los derechos reservados</p>
