--- a/html/compra.html
+++ b/html/compra.html
@@ -1,62 +1,69 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aqui podras ver todas tus compras">
-    <meta name="author" content="Carolina Lezcano">
-    <meta name="keywords" content="zapatilla nike air jordan, zapatilla nike air force, zapatilla vans">
-    <!-- Bootstrap CSS -->
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Compras-Calu Store</title>
-  </head>
-  <body>
-     <!-- Encabezado -->
-   <header class="container-fluid d-flex linear-gradient justify-content-center">
-      <p class="text-blue mb-0 p-2 fs-6">COMPRA HASTA 6 CUOTAS SIN INTERES</p>
-   </header>
-    <!-- ends encabezado -->
-    <!-- inicia nav -->
-    <nav class="navbar navbar-expand-lg bg-lightblue sticky-top" id="botonera">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"><h2>Calu Store</h2></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-             <li class="nav-item">
-                <a class="nav-link active" href="../index.html">Inicio</a>
-             </li>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Aqui podras ver todas tus compras">
+  <meta name="author" content="Carolina Lezcano">
+  <meta name="keywords" content="zapatilla nike air jordan, zapatilla nike air force, zapatilla vans">
+  <!-- Bootstrap CSS -->
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Compras-Calu Store</title>
+</head>
 
-             <li class="nav-item">
-                <a class="nav-link active" href="../contacto.html">Contacto</a>
-             </li>
+<body>
+  <!-- Encabezado -->
+  <header class="container-fluid d-flex linear-gradient justify-content-center">
+    <p class="text-blue mb-0 p-2 fs-6">COMPRA HASTA 6 CUOTAS SIN INTERES</p>
+  </header>
+  <!-- ends encabezado -->
+  <!-- inicia nav -->
+  <nav class="navbar navbar-expand-lg bg-lightblue sticky-top" id="botonera">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+        <h2>Calu Store</h2>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" href="../index.html">Inicio</a>
+          </li>
 
-             <li class="nav-item">
-                <a class="nav-link active"  href="../productos.html">Productos</a>
-             </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="../contacto.html">Contacto</a>
+          </li>
 
-             <li class="nav-item">
-                <a class="nav-link active" href="../nosotros.html">Nosotros</a>
-             </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="../nosotros.html">Nosotros</a>
+          </li>
 
-             <li class="nav-item">
-                <a class="nav-link active"  href="../ofertas.html">Ofertas</a>
-             </li>
-            </ul>
-            <form class="d-flex" role="Buscar">
-              <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
-              <button class="btn btn-outline-success" type="buscar">Buscar</button>
-            </form>
-          </div>
-        </div>
-    </nav>
-     <!-- ends nav --> 
-   <main>
+          <li class="nav-item">
+            <a class="nav-link active" href="../productos.html">Productos</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" href="../preguntasfrecuentes.html">Productos</a>
+          </li>
+
+        </ul>
+        <form class="d-flex" role="Buscar">
+          <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
+          <button class="btn btn-outline-success" type="buscar">Buscar</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <!-- ends nav -->
+  <main>
     <div class="grid-compra-padre">
       <div class="compra-hijo1">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -82,7 +89,7 @@
         </div>
       </div>
       <div class="compra-hijo2">
-        <table  class="tablas-contacto">
+        <table class="tablas-contacto">
           <tr>
             <th>Telefonos</th>
             <th>Correo</th>
@@ -98,47 +105,60 @@
             <td>calustore88@gmail.com</td>
             <td>Av Rivadavia 7428</td>
           </tr>
-           </table>
+        </table>
       </div>
       <div class="compra-hijo3">
         <form action="" class="formulario-hijo">
-          <legend><h3>Compra</h3></legend>
+          <legend>
+            <h3>Compra</h3>
+          </legend>
           <label for="cantidad">Cantidad</label>
           <input type="number" id="cantidad" name="cantidad" placeholder="cantidad" required>
           <label for="envio">Envio gratis a todo el pais</label>
           <input type="text" id="envio" name="envio" placeholder="envio" required>
-           <input type="submit" value="enviar"   class="btn" > 
-           <input type="reset" value="cancelar" class="btn" >
+          <input type="submit" value="enviar" class="btn">
+          <input type="reset" value="cancelar" class="btn">
         </form>
       </div>
       <div class="compra-hijo4">
         <form action="" class="formulario-hijo">
-          <legend><h3>Comentarios</h3></legend>
+          <legend>
+            <h3>Comentarios</h3>
+          </legend>
           <label for="email">Usuario</label>
           <input type="email" id="email" name="email" placeholder="correo" required>
           <label for="mensaje">Mensaje</label>
           <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
-           <input type="submit" value="enviar"   class="btn" > 
-           <input type="reset" value="cancelar" class="btn" >
+          <input type="submit" value="enviar" class="btn">
+          <input type="reset" value="cancelar" class="btn">
         </form>
       </div>
     </div>
-   </main>
-   <footer>
-        <div class="contenedor">
-          <h3 class="titulo">Sigamos conectados</h3>
-        </div>
-        <div class="redes-sociales">
-          <li class="fab fa-instagram"></li>
-          <li class="fab fa-twitter"></li>
-          <li class="fab fa-facebook"></li>
-        </div>
-        <div class="contenedor">
-          <p class="copy">© 2022 Carolina Lezcano / Todos los derechos reservados</p>
-        </div>
-   </footer>
-   <script src="https://kit.fontawesome.com/c81ab90589.js" crossorigin="anonymous"></script>
-   <!-- JavaScript Bundle with Popper -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  </body>
+  </main>
+  <footer>
+    <div class="contenedor">
+      <h3 class="titulo">Sigamos conectados</h3>
+    </div>
+    <div class="redes-sociales">
+      <a href="../html/compra.html">
+        <li class="fab fa-instagram"></li>
+      </a>
+      <a href="./compra.html">
+        <li class="fab fa-twitter"></li>
+      </a>
+      <a href="./compra.html">
+        <li class="fab fa-facebook"></li>
+      </a>
+    </div>
+    <div class="contenedor">
+      <p class="copy">© 2022 Carolina Lezcano / Todos los derechos reservados</p>
+    </div>
+  </footer>
+  <script src="https://kit.fontawesome.com/c81ab90589.js" crossorigin="anonymous"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
