--- a/html/contacto.html
+++ b/html/contacto.html
@@ -1,115 +1,125 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Si preferis una atencion personalizada puedes contactarnos">
-    <meta name="author" content="Carolina Lezcano">
-    <meta name="keywords" content="contacto, ayuda,consulta,">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Contacto-Calu Store</title>
-  </head>
- <body>
-     <!-- Encabezado -->
-     <header class="container-fluid d-flex linear-gradient justify-content-center">
-      <p class="text-blue mb-0 p-2 fs-6">COMPRA HASTA 6 CUOTAS SIN INTERES</p>
-     </header>
-     <!-- ends encabezado -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Si preferis una atencion personalizada puedes contactarnos">
+  <meta name="author" content="Carolina Lezcano">
+  <meta name="keywords" content="contacto, ayuda,consulta,">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css"
+    integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Contacto-Calu Store</title>
+</head>
 
-    <!-- inicia nav -->
-    <nav class="navbar navbar-expand-lg bg-lightblue sticky-top" id="botonera">
+<body>
+  <!-- Encabezado -->
+  <header class="container-fluid d-flex linear-gradient justify-content-center">
+    <p class="text-blue mb-0 p-2 fs-6">COMPRA HASTA 6 CUOTAS SIN INTERES</p>
+  </header>
+  <!-- ends encabezado -->
+
+  <!-- inicia nav -->
+  <nav class="navbar navbar-expand-lg bg-lightblue sticky-top" id="botonera">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">
+        <h2>Calu Store</h2>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" href="../index.html">Inicio</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" href="./contacto.html">Contacto</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" href="./nosotros.html">Nosotros</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" href="./productos.html">Productos</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" href="./preguntasfrecuentes.html">Preguntas Frecuentes</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- ends nav -->
+  <main>
+    <div class="grid-padre-contacto">
+      <div class="contacto">
+        <form>
+          <h3>Contacto</h3>
+          <input type="text" name="Nombre" placeholder="ej: Amira">
+          <input type="text" name="Apellido" placeholder="ej: Gonzalez">
+          <input type="text" name="Correo electronico" placeholder="ej: tunombre@gmail.com">
+          <input type="text" name="Numero telefonico (opcional)" placeholder="ej: 1184657498">
+          <textarea name="mensaje" placeholder="Escriba aqui su mensaje"></textarea>
+          <input type="button" value="ENVIAR" id="boton">
+        </form>
+      </div>
+      <div class="mapa">
+        <h2>Estamos ubicados en Av Rivadavia 7428</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.9308357594923!2d-58.472280384769675!3d-34.631188080452254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc98f1873779f%3A0xa8d52c82fba63035!2sAv.%20Rivadavia%207428%2C%20C1406GMR%20CABA!5e0!3m2!1ses-419!2sar!4v1655136338910!5m2!1ses-419!2sar"
+          style="border:0;" width="100%" height="100%" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div class="datos">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"><h2>Calu Store</h2></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" href="../index.html">Inicio</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link active" href="../contacto.html">Contacto</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link active"  href="../productos.html">Productos</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link active" href="../nosotros.html">Nosotros</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link active"  href="../ofertas.html">Ofertas</a>
-              </li>
-
-			  <li class="nav-item">
-                <a class="nav-link active"  href="../preguntasfrecuentes.html">Preguntas Frecuentes</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="Buscar">
-              <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
-              <button class="btn btn-outline-success" type="buscar">Buscar</button>
-            </form>
-          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item"><Strong>
+                <h2>Contactanos</h2>
+              </Strong></li>
+            <li class="list-group-item">5491174585934</li>
+            <li class="list-group-item">1198562367</li>
+            <li class="list-group-item">calustore88@gmail.com</li>
+            <li class="list-group-item">Av Rivadavia 7428</li>
+          </ul>
         </div>
-      </nav>
-      <!-- ends nav --> 
-	<main>
-	    <div class="grid-padre-contacto">
-	        <div class="contacto">
-		     <form>
-			  <h3>Contacto</h3>
-			  <input type="text" name="Nombre" placeholder="ej: Amira">
-			<input type="text" name="Apellido" placeholder="ej: Gonzalez">
-			<input type="text" name="Correo electronico" placeholder="ej: tunombre@gmail.com">
-			<input type="text" name="Numero telefonico (opcional)" placeholder="ej: 1184657498">
-			<textarea name="mensaje" placeholder="Escriba aqui su mensaje"></textarea>
-			<input type="button" value="ENVIAR" id="boton">
-		  </form>
-	        </div>
-	        <div class="mapa">
-		 <h2>Estamos ubicados en Av Rivadavia 7428</h2>
-		  <iframe
-			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.9308357594923!2d-58.472280384769675!3d-34.631188080452254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc98f1873779f%3A0xa8d52c82fba63035!2sAv.%20Rivadavia%207428%2C%20C1406GMR%20CABA!5e0!3m2!1ses-419!2sar!4v1655136338910!5m2!1ses-419!2sar"
-			style="border:0;" width="100%" height="100%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-	        </div>
-	        <div class="datos">
-			<div class="container-fluid">
-			  <ul class="list-group list-group-flush">
-				<li class="list-group-item"><Strong><h2>Contactanos</h2></Strong></li>
-				<li class="list-group-item">5491174585934</li>
-				<li class="list-group-item">1198562367</li>
-				<li class="list-group-item">calustore88@gmail.com</li>
-				<li class="list-group-item">Av Rivadavia 7428</li>
-			  </ul>
-			 </div>
-			</div>
-			<div class="marca">
-               <img src="../img/3x2.webp" width="100%" alt="zapatillas adidas promocion">
-			</div>
-		</div>
-    </main>  
-	<footer>
-		<div class="contenedor">
-			<h3 class="titulo">Sigamos conectados</h3>
-		</div>
-		<div class="redes-sociales">
-			<li class="fab fa-instagram"></li>
-			<li class="fab fa-twitter"></li>
-			<li class="fab fa-facebook"></li>
-		</div>
-		<div class="contenedor">
-			<p class="copy">© 2022 Carolina Lezcano / Todos los derechos reservados</p>
-		</div>
-	</footer>
-	<script src="https://kit.fontawesome.com/c81ab90589.js" crossorigin="anonymous"></script>
-	<!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+      </div>
+      <div class="marca">
+        <img src="../img/3x2.webp" width="100%" alt="zapatillas adidas promocion">
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="contenedor">
+      <h3 class="titulo">Sigamos conectados</h3>
+    </div>
+    <div class="redes-sociales">
+      <a href="./contacto.html">
+        <li class="fab fa-instagram"></li>
+      </a>
+      <a href="./contacto.html">
+        <li class="fab fa-twitter"></li>
+      </a>
+      <a href="./contacto.html">
+        <li class="fab fa-facebook"></li>
+      </a>
+    </div>
+    <div class="contenedor">
+      <p class="copy">© 2022 Carolina Lezcano / Todos los derechos reservados</p>
+    </div>
+  </footer>
+  <script src="https://kit.fontawesome.com/c81ab90589.js" crossorigin="anonymous"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
