--- a/html/productos.html
+++ b/html/productos.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Zapatillas multimarcas, de calidad y a un buen precio solo en este sitio">
-    <meta name="author" content="Carolina Lezcano">
-    <meta name="keywords" content="zapatilla nike air jordan, zapatilla nike air force, zapatilla vans">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.rtl.min.css" integrity="sha384-dc2NSrAXbAkjrdm9IYrX10fQq9SDG6Vjz7nQVKdKcJl3pC+k37e7qJR5MVSCS+wR" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Productos-Calu Store</title>
-  </head>
-  <body>
-     <!-- Encabezado -->
-     <header class="container-fluid d-flex linear-gradient justify-content-center">
-      <p class="text-blue mb-0 p-2 fs-6">COMPRA HASTA 6 CUOTAS SIN INTERES</p>
-    </header>
-    <!-- ends encabezado -->
 
-   <!-- inicia nav -->
-   <nav class="navbar navbar-expand-lg bg-lightblue sticky-top" id="botonera">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Ofertas y promociones del momento y al mejor precio">
+  <meta name="author" content="Carolina Lezcano">
+  <meta name="keywords" content="zapatilla nike air jordan, zapatilla nike air force, zapatilla vans">
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Ofertas-Calu Store</title>
+</head>
+
+<body>
+  <!-- Encabezado -->
+  <header class="container-fluid d-flex linear-gradient justify-content-center">
+    <p class="text-blue mb-0 p-2 fs-6">COMPRA HASTA 6 CUOTAS SIN INTERES</p>
+  </header>
+  <!-- ends encabezado -->
+
+  <!-- inicia nav -->
+  <nav class="navbar navbar-expand-lg bg-lightblue sticky-top" id="botonera">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html"><h2>Calu Store</h2></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="../index.html">
+        <h2>Calu Store</h2>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -33,119 +38,158 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="../contacto.html">Contacto</a>
+            <a class="nav-link active" href="./contacto.html">Contacto</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active"  href="../productos.html">Productos</a>
+            <a class="nav-link active" href="./nosotros.html">Nosotros</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="../nosotros.html">Nosotros</a>
+            <a class="nav-link active" href="./productos.html">Productos</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active"  href="../ofertas.html">Ofertas</a>
+            <a class="nav-link active" href="./preguntasfrecuentes.html">Preguntas Frecuentes</a>
           </li>
         </ul>
-        <form class="d-flex" role="Buscar">
-          <input class="form-control me-2" type="Buscar" placeholder="Buscar" aria-label="Buscar">
-          <button class="btn btn-outline-success" type="buscar">Buscar</button>
-        </form>
       </div>
     </div>
   </nav>
-  <!-- ends nav --> 
-    <main>
-      <!-- inicia cards -->
+  <!-- ends nav -->
+  <main>
+    <!-- inicia cards -->
+
     <section class="row py-3">
-        <article class="col-ms-12 col-md-6 col-lg-3">
-      <div class="card-section border rounded p-3" style="width: 18rem;">
-        <a href="../compra.html"><img class="card-img-top" src="../img/nikejordan.jpg" alt="zapatilla jordan " class="w-100 img-thumbnail"></a>
-        <div class="card-body text-center card-header-first">
-          <h5 class="card-title">$9.999</h5>
-          <p class="card-text">Zapatillas Air Jordan</p>
-          <a href="../compra.html" class="btn btn-primary">Comprar</a>
+      <article class="col-ms-12 col-md-6 col-lg-3">
+        <div class="card-section border rounded p-3" style="width: 18rem;">
+          <img class="card-img-top" src="../img/nikejordan.jpg" alt="zapatilla jordan " class="w-100 img-thumbnail">
+          <div class="card-body text-center card-header-first">
+            <h5 class="card-title">$9.999</h5>
+            <p class="card-text">Zapatillas Air Jordan</p>
+            <a href="/html/compra.html" class="btn btn-primary">Comprar</a>
+          </div>
         </div>
-      </div>
       </article>
 
       <article class="col-ms-12 col-md-6 col-lg-3">
-      <div class="card-section border rounded p-3" style="width: 18rem;">
-        <a href="../compra.html"><img class="card-img-top" src="../img/jordanrosa1.jpg" alt="zapatilla jordan rosa" class="w-100 img-thumbnail"></a>
-        <div class="card-body text-center card-header-second">
-          <h5 class="card-title">$9.999</h5>
-          <p class="card-text">Zapatillas Air Jordan Rosa</p>
-          <a href="../compra.html" class="btn btn-primary">Comprar</a>
-        </div>
-      </div>
-    </article>
-
-    <article class="col-ms-12 col-md-6 col-lg-3">
-      <div class="card-section border rounded p-3" style="width: 18rem;">
-        <a href="../compra.html"><img class="card-img-top" src="../img/vansnegras.jpg" alt="zapatilla vans negras" class="w-100 img-thumbnail"></a>
-        <div class="card-body text-center card-header-third">
-          <h5 class="card-title">$9.999</h5>
-          <p class="card-text">Zapatillas Vans Negras</p>
-          <a href="../compra.html" class="btn btn-primary">Comprar</a>
-        </div>
-      </div>
-    </article>
-
-    <article class="col-ms-12 col-md-6 col-lg-3">
         <div class="card-section border rounded p-3" style="width: 18rem;">
-         <a href="../compra.html"><img class="card-img-top" src="../img/nikeair.jpg" alt="zapatilla nike air force" class="w-100 img-thumbnail"></a>
+          <img class="card-img-top" src="../img/jordanrosa1.jpg" alt="zapatilla jordan rosa"
+            class="w-100 img-thumbnail">
+          <div class="card-body text-center card-header-second">
+            <h5 class="card-title">$9.999</h5>
+            <p class="card-text">Zapatillas Air Jordan Rosa</p>
+            <a href="/html/compra.html" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </article>
+
+      <article class="col-ms-12 col-md-6 col-lg-3">
+        <div class="card-section border rounded p-3" style="width: 18rem;">
+          <img class="card-img-top" src="../img/vansnegras.jpg" alt="zapatilla vans negras" class="w-100 img-thumbnail">
+          <div class="card-body text-center card-header-third">
+            <h5 class="card-title">$9.999</h5>
+            <p class="card-text">Zapatillas Vans Negras</p>
+            <a href="/html/compra.html" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </article>
+
+      <article class="col-ms-12 col-md-6 col-lg-3">
+        <div class="card-section border rounded p-3" style="width: 18rem;">
+          <img class="card-img-top" src="../img/nikeair.jpg" alt="zapatilla nike air force" class="w-100 img-thumbnail">
           <div class="card-body text-center">
             <h5 class="card-title">$9.999</h5>
             <p class="card-text">Zapatill Nike Air Force</p>
-            <a href="../compra.html" class="btn btn-primary">Comprar</a>
+            <a href="/html/compra.html" class="btn btn-primary">Comprar</a>
           </div>
         </div>
       </article>
     </section>
-      <!-- ends cards -->
-
-    <section class="row py-2">
+    <!-- ends cards -->
+    <div class="container-fluid hijo-grid3">
+      <h1 class="mt-2 text-center text-blue">NUEVOS INGRESOS</h1>
+      <section class="row py-2">
         <article class="col-sm-12 col-md-6 col-lg-3">
-         <img src="img/adidas.jpg" alt="adidas" class="w-100 img-thumbnail">
-         <p>Zapatillas Adidas</p>
-         <h3 class="text-blue">$5.999</h3>
-        </article><!--ends card I-->
+          <img src="../img/adidas rosa.jpg" alt="Zapatillas Adidas" class="w-100 img-thumbnail">
+          <p>Zapatillas Adidas</p>
+          <h3 class="text-blue">$12.000</h3>
+        </article>
+        <!--ends card I-->
 
         <article class="col-sm-12 col-md-6 col-lg-3">
-            <img src="img/zapasvans.jpg" alt="vans" class="w-100 img-thumbnail">
-            <p>Zapatillas Vans Old School Unisex</p>
-            <h3 class="text-blue">$6.999</h3>
-           </article><!--ends card II-->
+          <img src="../img/zapaNIKE.jpg" alt="Zapatillas nike" class="w-100 img-thumbnail">
+          <p>Zapatillas Nike Air force</p>
+          <h3 class="text-blue">$28.500</h3>
+        </article>
+        <!--ends card II-->
 
-           <article class="col-sm-12 col-md-6 col-lg-3">
-            <img src="img/nikeair.jpg" alt="nike air" class="w-100 img-thumbnail">
-            <p>Zapatillas Nike Air Force 1 Unisex</p>
-            <h3 class="text-blue" >$8.999</h3>
-           </article><!--ends card III-->
+        <article class="col-sm-12 col-md-6 col-lg-3">
+          <img src="../img/zapatillaNIKE.jpg" alt="nike air" class="w-100 img-thumbnail">
+          <p>Zapatillas Nike Air Force 1</p>
+          <h3 class="text-blue">$25.999</h3>
+        </article>
+        <!--ends card III-->
 
-           <article class="col-sm-12 col-md-6 col-lg-3">
-            <img src="img/nikejordan.jpg" alt="niek air jordan" class="w-100 img-thumbnail">
-            <p>Zapatillas Nike Air Jordan</p>
-            <h3 class="text-blue">$9.999</h3>
-           </article><!--ends card IV-->
-    </section><!-- ends row-->
-    </main>
-      <footer>
-        <div class="contenedor">
-            <h3 class="titulo">Sigamos conectados</h3>
-        </div>
-        <div class="redes-sociales">
-            <li class="fab fa-instagram"></li>
-            <li class="fab fa-twitter"></li>
-            <li class="fab fa-facebook"></li>
-        </div>
-        <div class="contenedor">
-            <p class="copy">© 2022 Carolina Lezcano / Todos los derechos reservados</p>
-        </div>
-      </footer>
-      <script src="https://kit.fontawesome.com/c81ab90589.js" crossorigin="anonymous"></script>
-      <!-- JavaScript Bundle with Popper -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  </body>
- </html>
+        <article class="col-sm-12 col-md-6 col-lg-3">
+          <img src="../img/zapanike2.jpg" alt="nike air jordan" class="w-100 img-thumbnail">
+          <p>Zapatillas Nike Air Force</p>
+          <h3 class="text-blue">$26.999</h3>
+        </article>
+
+        <article class="col-sm-12 col-md-6 col-lg-3">
+          <img src="../img/ZAPASADIDAS.jpg" alt="zapatillas adidas" class="w-100 img-thumbnail">
+          <p>Zapatillas Adidas Superstar</p>
+          <h3 class="text-blue">$28.999</h3>
+        </article>
+
+        <article class="col-sm-12 col-md-6 col-lg-3">
+          <img src="../img/nike Zapa.jpg" alt="zapatilla nike jordan rosa" class="w-100 img-thumbnail">
+          <p>Zapatillas Nike</p>
+          <h3 class="text-blue">$27.999</h3>
+        </article>
+
+        <article class="col-sm-12 col-md-6 col-lg-3">
+          <img src="../img/zapatilla.jpg" alt="Nike air jordan" class="w-100 img-thumbnail">
+          <p>Zapatillas Nike Air Jordan</p>
+          <h3 class="text-blue">$19.999</h3>
+        </article>
+
+        <article class="col-sm-12 col-md-6 col-lg-3">
+          <img src="../img/ZAPANIKE1.jpg" alt="Zapatilla Nike Air Force" class="w-100 img-thumbnail">
+          <p>Zapatillas Nike Air Force</p>
+          <h3 class="text-blue">$29.999</h3>
+        </article>
+      </section>
+    </div>
+    </div>
+
+  </main>
+
+  <footer>
+    <div class="contenedor">
+      <h3 class="titulo">Sigamos conectados</h3>
+    </div>
+    <div class="redes-sociales">
+      <a href="./productos.html">
+        <li class="fab fa-instagram"></li>
+      </a>
+      <a href="./productos.html">
+        <li class="fab fa-twitter"></li>
+      </a>
+      <a href="./productos.html">
+        <li class="fab fa-facebook"></li>
+      </a>
+    </div>
+    <div class="contenedor">
+      <p class="copy">© 2022 Carolina Lezcano / Todos los derechos reservados</p>
+    </div>
+  </footer>
+  <script src="https://kit.fontawesome.com/c81ab90589.js" crossorigin="anonymous"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
